=Upcoming=
New Windows Games:
=2012/7/18=
New Windows Games:
* AI War: Fleet Command
* Armada 2526
* Assassin's Creed: Revelations
* Cities XL
* Conflict: Denied Ops
* Crusader Kings II
* Endless Space
* Escape Goat
* Europa Universalis III
* Harvest: Massive Encounter
* Heroes of Might and Magic VI
* Insanely Twisted Shadow Planet
* Katawa Shoujo
* Major League Baseball 2K9
* Major League Baseball 2K10
* Major League Baseball 2K11
* Minecraft
* NBA 2K11
* Puzzle Quest: Galactrix
* Realflight G5
* Rogue Trooper
* Savage 2
* Shoot Many Robots
* Tropico 4
* Virtual Families
Updated Windows Games:
* Darwinia - Added XP path
* Gemini Rue - Added GoG info
* Uplink - Added GoG info
* The Witcher 2 - Added Steamcloud info
=2012/7/11=
New Windows Games:
* Aliens vs. Predator Classic
* And Yet It Moves - Steam Only
* Beat Hazard - Steam only
* Blur
* Botanicula
* Bus Driver
* Cave Story+ - Steam only
* Cogs
* Command & Conquer: Generals
* Dark Scavenger
* Din's Curse
* Dungeon Defenders - Steam only
* Empire: Total War
* Guilty Gear X2
* Harry Potter and the Half-Blood Prince
* Heroes of Might and Magic V
* Hinterland
* Hospital Tycoon
* Jagged Alliance 2 Gold - Steam only
* Lost Planet: Extreme Condition
* Lumines
* Majesty Gold HD
* Majesty 2
* Mosby's Confederacy
* Napoleon: Total War
* Night Sky
* Nimbus - Steam only
* Pocket Tanks
* Rayman Origins
* Risen
* Risen 2
* Rock of Ages - Steam only
* Saint's Row 2
* Sequence - Steam only
* SpaceChem
* Spectromancer - Steam only
* Starscape
* Star Wars: The Clone Wars - Republic Heroes
* Supreme Commander 2
* Yesterday
Updated Windows Games:
* Command & Conquer 3 - Added XP paths
* Doom 3 - Added steam path
* Rome: Total War - Added steam paths
* Tropico 2 - Added steam paths
* VVVVVV - Added new 2.0 paths
6/15/2011
New Windows Games:
* Alan Wake - GoG only
* Alan Wake American Nightmare - GoG only
* Blackwell Deception
* ArcaniA (Gothic 4) - Contributed by Arc Angel
* ArcaniA: Fall of Setarrif - Contributed by Arc Angel