@@ -1,5 +1,10 @@
 =Upcoming=
 New Windows Games:
+* Max Payne 3
+* Pirates of Black Cove
+* Port Royale 3: Pirates & Merchants
+Updated Windows Games:
+* Assassin's Creed: Brotherhood - Added XP path
 =2012/7/18=
 New Windows Games:
 * AI War: Fleet Command
